# HealthKart-recommendation-system

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  params.yaml  pyproject.toml  requirements.txt  training_pipeline.py
notebooks/: bert_sentiment.ipynb  data_loading.ipynb  data_preprocessing.ipynb  entity_extraction.ipynb  feature_enngineering.ipynb  mode_training.ipynb  model_tracking.ipynb
src/: exception.py
src/entity/: entity_extraction.py
src/recommender/: inference.py  recommendation.py  temporal_analysis.py
src/sentiment/: inference.py
src/sentiment/componet/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py
