[project]
name = "healthkart-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagshub>=0.6.4",
    "gdown>=5.2.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.0",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
